<resources>

    <string name="app_name">AndroidEatIt</string>
    <string name="your_name">Your Name</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="register">Register</string>
    <string name="REGISTER">REGISTER</string>
    <string name="Rating">Rating Food</string>
    <string name="size">Size</string>

    <string name="please_fill_information">Please fill information</string>
    <string name="cancel">CANCEL</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="please_enter_your_address">Please enter your address</string>
    <string name="congratulation">Congratulation! Register success</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_menu">Categories</string>
    <string name="menu_food_detail">Food Detail</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_food_list">Food List</string>
    <string name="popular_categories">Popular Categories</string>
    <string name="best_deals">Best Deals</string>
    <string name="popular">Popular</string>
    <string name="name_of_food">Name of food</string>
    <string name="price">$100</string>
    <string name="please_write_something">Please write something</string>
    <string name="food_name">Food Name</string>
    <string name="food_price">1,0000</string>
    <string name="description">Description</string>
    <string name="show_comment">Show Comment</string>
    <string name="name">Name</string>
    <string name="comment">Comment</string>
    <string name="add_on">Addon</string>
    <string name="search">Search</string>
    <string name="example">Example</string>
    <string name="empty_cart">EMPTY CART</string>
    <string name="total_0_0">Total: 0,0</string>
    <string name="_100_0">100.0</string>
    <string name="place_order">Place Order</string>
    <string name="action_clear_cart">Clear Cart</string>
</resources>
